plugins {
  id "java"
  id 'org.springframework.boot' version '3.1.0'
  id 'io.spring.dependency-management' version '1.1.0'
}

version = "3.1.1"

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

javadoc {
  options.addBooleanOption('Xdoclint:none', true)
}

test {
  useJUnitPlatform()
}

jar.enabled=false
springBoot {
  buildInfo()
}

repositories {
	mavenCentral()
}

dependencies {
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    annotationProcessor "org.projectlombok:lombok"
    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
    compileOnly "org.projectlombok:lombok"
    implementation "org.springdoc:springdoc-openapi-ui:1.7.0"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-aop"
    implementation "org.springframework.boot:spring-boot-starter-cache"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hibernate6"
    implementation "commons-io:commons-io:2.12.0"
    implementation "org.apache.commons:commons-lang3"
    runtimeOnly "net.logstash.logback:logstash-logback-encoder:7.3"
    runtimeOnly "org.postgresql:postgresql:42.6.0"
    runtimeOnly "com.h2database:h2"
    testAnnotationProcessor "org.projectlombok:lombok"
    testCompileOnly "org.projectlombok:lombok"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

wrapper {
    gradleVersion = "8.2"
}
